<resources>
    <string name="app_name">JEC Scholarship</string>
    <!--for intro activity-->
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <!--    for sign up activity-->
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email id and password, to Sign In to your Account.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>


    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <dimen name="main_screen_content_padding">16dp</dimen>
    <dimen name="no_boards_available_text_size">16sp</dimen>
    <dimen name="item_board_content_marginBottom">10dp</dimen>
    <dimen name="item_board_content_padding">10dp</dimen>
    <dimen name="item_board_image_size">60dp</dimen>
    <dimen name="item_board_image_circular_border_width">0.5dp</dimen>
    <dimen name="item_board_name_layout_marginStart">10dp</dimen>
    <dimen name="item_board_name_text_size">18sp</dimen>
    <dimen name="item_board_created_by_text_size">14sp</dimen>
    <dimen name="item_board_divider_marginTop">5dp</dimen>
    <dimen name="item_board_divider_height">1dp</dimen>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">projectpulse_notification_channel_id</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_file_chosen">No File Chosen</string>


</resources>
