<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".intro.IntroActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="25dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_app_name_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="monospace"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/intro_screen_title_text_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/intro_screen_image_marginTop"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_jec" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
                android:layout_gravity="center"
                android:text="@string/let_s_get_started_text"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/lets_get_started_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                android:layout_marginTop="@dimen/intro_text_marginTop"
                android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
                android:text="Welcome to the JEC Scholarship App! Streamline your scholarship application process with ease. Log in to access, apply, and manage your scholarship opportunities directly from your mobile device."
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/intro_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:background="@drawable/white_border_shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/sign_up"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>